[metadata]
name = aligo
version = attr: gridview.info.__version__
author = lijunjie2232
author_email = 2533584225@qq.com
description = gridview utils lib for hpc platform
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
url = 
project_urls =
    Source = 
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Environment :: Console
    Natural Language :: Chinese (Simplified)
    Development Status :: 5 - Production/Stable
keywords = gridview
[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pandas
    PyTermGUI
    requests
    requests-toolbelt==1.0.0
    rich
    ruamel.yaml==0.17.32
    scipy
    tqdm
[options.packages.find]
where = .
exclude =

